--- a/10-deep_learning.ipynb
+++ b/10-deep_learning.ipynb
@@ -568,9 +568,7 @@
     " \n",
     " * The code below will generate the features for the train set and save it to the file ```bottleneck_features_train.npy``` and ```bottleneck_features_test.npy```.\n",
     "\n",
-    " * Construct a shallow network that uses these features to predict cat/dog (this is the part that you need to code :-).\n",
-    "\n",
-    "People have posted pretrained networks https://gist.github.com/baraldilorenzo/07d7802847aaad0a35d3"
+    " * Construct a simple classifier (e.g. a scikit-learn linear model) that uses these features to predict cat/dog (this is the part that you need to code :-).\n"
    ]
   },
   {
@@ -581,7 +579,7 @@
    },
    "outputs": [],
    "source": [
-    "# template code \n",
+    "# template code to get you started\n",
     "\n",
     "import os\n",
     "import h5py\n",
@@ -668,27 +666,201 @@
     "            class_mode=None,\n",
     "            shuffle=False)\n",
     "    bottleneck_features_train = model.predict_generator(generator, nb_train_samples)\n",
-    "    np.save(open('bottleneck_features_train.npy', 'w'), bottleneck_features_train)\n",
     "\n",
-    "    generator = datagen.flow_from_directory(\n",
-    "            validation_data_dir,\n",
-    "            target_size=(img_width, img_height),\n",
-    "            batch_size=32,\n",
-    "            class_mode=None,\n",
-    "            shuffle=False)\n",
-    "    bottleneck_features_validation = model.predict_generator(generator, nb_validation_samples)\n",
-    "    np.save(open('bottleneck_features_test.npy', 'w'), bottleneck_features_validation)\n",
-    "\n"
+    "    # TODO: save the features and do the same on the test set\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3: pretrained models for natural language\n",
+    "\n",
+    "It is also possible to use pretrained networks for the task of classification of text data. In this case we will make use of word embedding and the GloVe networks which you can [download from here](http://nlp.stanford.edu/data/glove.6B.zip).\n",
+    "\n",
+    "\n",
+    "As motivation task, we will use an old friend, the 20news dataset :-)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data loaded\n",
+      "Example sample in the dataset: \n",
+      "\n",
+      "\n",
+      "Actually, Hiten wasn't originally intended to go into lunar orbit at all,\n",
+      "so it indeed didn't have much fuel on hand.  The lunar-orbit mission was\n",
+      "an afterthought, after Hagoromo (a tiny subsatellite deployed by Hiten\n",
+      "during a lunar flyby) had a transmitter failure and its proper insertion\n",
+      "into lunar orbit couldn't be positively confirmed.\n",
+      "\n",
+      "It should be noted that the technique does have disadvantages.  It takes\n",
+      "a long time, and you end up with a relatively inconvenient lunar orbit.\n",
+      "If you want something useful like a low circular polar orbit, you do have\n",
+      "to plan to expend a certain amount of fuel, although it is reduced from\n",
+      "what you'd need for the brute-force approach.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the 20news dataset\n",
+    "\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "categories = [\n",
+    "        'comp.graphics',\n",
+    "        'sci.space',\n",
+    "    ]\n",
+    "remove = ('headers', 'footers', 'quotes')\n",
+    "texts = datasets.fetch_20newsgroups(subset='all', categories=categories,\n",
+    "                                shuffle=True, random_state=42,\n",
+    "                                remove=remove)\n",
+    "\n",
+    "# data_test = datasets.fetch_20newsgroups(subset='test', categories=categories,\n",
+    "#                                shuffle=True, random_state=42,\n",
+    "#                                remove=remove)\n",
+    "print('data loaded')\n",
+    "print('Example sample in the dataset: \\n')\n",
+    "print(texts.data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 25148 unique tokens.\n",
+      "Shape of data tensor: (1960, 1000)\n",
+      "Shape of label tensor: (1960, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/fabianpedregosa/dev/scikit-learn/sklearn/cross_validation.py:43: DeprecationWarning: This module has been deprecated in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.utils.np_utils import to_categorical\n",
+    "from sklearn import cross_validation\n",
+    "from keras.layers.embeddings import Embedding\n",
+    "\n",
+    "MAX_NB_WORDS = 20000\n",
+    "MAX_SEQUENCE_LENGTH = 1000\n",
+    "tokenizer = Tokenizer(nb_words=MAX_NB_WORDS)\n",
+    "tokenizer.fit_on_texts(texts.data)\n",
+    "sequences = tokenizer.texts_to_sequences(texts.data)\n",
+    "\n",
+    "word_index = tokenizer.word_index\n",
+    "print('Found %s unique tokens.' % len(word_index))\n",
+    "\n",
+    "data = pad_sequences(sequences, maxlen=MAX_SEQUENCE_LENGTH)\n",
+    "\n",
+    "labels = to_categorical(np.asarray(texts.target))\n",
+    "print('Shape of data tensor:', data.shape)\n",
+    "print('Shape of label tensor:', labels.shape)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = cross_validation.train_test_split(texts.data, texts.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexing word vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Indexing word vectors.')\n",
+    "\n",
+    "embeddings_index = {}\n",
+    "f = open('glove.6B/glove.6B.100d.txt')\n",
+    "for line in f:\n",
+    "    values = line.split()\n",
+    "    word = values[0]\n",
+    "    coefs = np.asarray(values[1:], dtype='float32')\n",
+    "    embeddings_index[word] = coefs\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "# prepare embedding matrix\n",
+    "EMBEDDING_DIM = 100\n",
+    "nb_words = min(MAX_NB_WORDS, len(word_index))\n",
+    "embedding_matrix = np.zeros((nb_words + 1, EMBEDDING_DIM))\n",
+    "for word, i in word_index.items():\n",
+    "    if i > MAX_NB_WORDS:\n",
+    "        continue\n",
+    "    embedding_vector = embeddings_index.get(word)\n",
+    "    if embedding_vector is not None:\n",
+    "        # words not found in embedding index will be all-zeros.\n",
+    "        embedding_matrix[i] = embedding_vector\n",
+    "\n",
+    "# load pre-trained word embeddings into an Embedding layer\n",
+    "# note that we set trainable = False so as to keep the embeddings fixed\n",
+    "embedding_layer = Embedding(nb_words + 1,\n",
+    "                            EMBEDDING_DIM,\n",
+    "                            weights=[embedding_matrix],\n",
+    "                            input_length=MAX_SEQUENCE_LENGTH,\n",
+    "                            trainable=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# take it from here, e.g., see https://keras.io/layers/embeddings/"
+   ]
   },
   {
    "cell_type": "code",
